--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/core": "^9.7.2",
+    "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.60.0",
     "@react-three/fiber": "^8.12.0",
     "@react-three/postprocessing": "^2.7.1",
@@ -19,5 +21,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.151.2"
-  }
+  },
+  "devDependencies": {}
 }
