--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^13.3.1",
     "@react-spring/core": "^9.7.2",
     "@react-spring/three": "^9.7.2",
     "@react-three/drei": "^9.60.0",
