--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postprocessing": "^6.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "three": "^0.151.2"
   },
   "devDependencies": {}
