--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^2.7.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "gsap": "^3.12.2",
     "next": "13.2.4",
     "postprocessing": "^6.30.1",
     "react": "18.2.0",
